test/scc/expr/semantic-errors/158.a
158.t:6:1: error: 'B' defined as wrong kind of tag